--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>io.github.bluewindvane</groupId>
     <artifactId>neves-spring-boot-starter</artifactId>
-    <version>1.0.1</version>
+    <version>1.0.4</version>
     <name>neves-spring-boot-starter</name>
     <description>Demo project for Spring Boot</description>
     <packaging>jar</packaging>
@@ -200,6 +200,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
             </plugin>
         </plugins>
     </build>
